initial guitar card added

--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -13,9 +13,177 @@
 
 {% block content %}
     <div class="container h-100">
+        <div class="row">
+            <div class="col text-center logo-txt gold-txt display-4 mt-5 mb-5">
+                Guitars
+            </div>
+        </div>
         <div class="row h-100">
             <div class="col main-content-col my-auto">
-                {{ guitars }}}}
+                <div class="row">
+
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card bg-dark guitar-card">
+                            <h3 class="card-header text-center">
+                                Gold
+                            </h3>
+                            <img src="/media/gv1.png" class="card-img-top" alt="...">
+
+                            <h5 class="card-title text-center">PRS Silver Sky</h5>
+                            <div class="row card-body">
+                                <div class="col">
+                                    <div class="guitar-card-list">
+                                        <div class="d-flex flex-row">
+                                            <p class="col-6">Category</p>
+                                            <p class="col-6">Electric</p>
+                                        </div>
+                                        <div class="d-flex flex-row">
+                                            <p class="col-6">Status</p>
+                                            <p class="col-6">Available</p>
+                                        </div>
+                                        <div class="d-flex flex-row">
+                                            <p class="col-6">Handed</p>
+                                            <p class="col-6">Right Handed</p>
+                                        </div>
+                                        <div class="d-flex flex-row">
+                                            <p class="col-6">Condition</p>
+                                            <p class="col-6">Excellent</p>
+                                        </div>
+                                        <div class="d-flex flex-row">
+                                            <p class="col-6">Condition Rating</p>
+                                            <p class="col-6">5</p>
+                                        </div>
+                                        <div class="d-flex flex-row">
+                                            <p class="col-6">Overall Rating</p>
+                                            <p class="col-6">4</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                            <div class="card-footer text-muted">
+                                <ul class="list-inline list-unstyled text-center">
+                                    <li class="list-inline-item">Favourite</li>
+                                    <li class="list-inline-item">Loan</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Featured
+                            </div>
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">An item</li>
+                                <li class="list-group-item">A second item</li>
+                                <li class="list-group-item">A third item</li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Featured
+                            </div>
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">An item</li>
+                                <li class="list-group-item">A second item</li>
+                                <li class="list-group-item">A third item</li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Featured
+                            </div>
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">An item</li>
+                                <li class="list-group-item">A second item</li>
+                                <li class="list-group-item">A third item</li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Featured
+                            </div>
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">An item</li>
+                                <li class="list-group-item">A second item</li>
+                                <li class="list-group-item">A third item</li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Featured
+                            </div>
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">An item</li>
+                                <li class="list-group-item">A second item</li>
+                                <li class="list-group-item">A third item</li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                </div>
 
                 
             </div>
