--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,8 @@
     {% block corejs %}
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/d01fd203b5.js" crossorigin="anonymous"></script>
+        <!--Additional FontAwesome JS to enable 'stacking' feature-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"></script>
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <!-- Bootstrap -->
