--- a/static/css/base.css
+++ b/static/css/base.css
@@ -153,8 +153,8 @@ body {
 }
 
 .card-img-top {
-    max-height: 40vh;
-    width:auto;
+    max-height: 50vh;
+    object-fit: cover;
 }
 
 .tp-text {
